--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,10 +126,10 @@ dependencies {
     // Image Loading
     implementation 'com.github.florent37:glidepalette:2.1.1@aar'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
-    implementation 'com.github.bumptech.glide:okhttp-integration:1.3.1'
+    implementation 'com.github.bumptech.glide:okhttp-integration:4.2.0'
     // RxJava
-    implementation 'io.reactivex:rxjava:1.1.0'
-    implementation 'io.reactivex:rxandroid:1.1.0'
+    implementation 'io.reactivex:rxjava:1.2.3'
+    implementation 'io.reactivex:rxandroid:1.2.1'
     // LeakCanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
@@ -137,9 +137,12 @@ dependencies {
     implementation 'com.squareup:otto:1.3.8'
     // HTTP
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
-    implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
     // SqlBrite
     implementation 'com.squareup.sqlbrite:sqlbrite:1.1.2'
+    // Dependency Injection
+    implementation 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     // Testing
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -156,12 +159,8 @@ dependencies {
     }
     // Set this dependency to build and run UI Automator tests
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
-    androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'org.mockito:mockito-core:1.9.5'
-    // Add Dagger dependencies
-    implementation 'com.google.dagger:dagger:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     compileOnly 'javax.annotation:jsr250-api:1.0'
 }
 
