--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,6 @@ android {
         // Enable this if you want to use Build.GIT_SHA in your code somewhere.
         // This will give you the last GIT_SHA that was committed
         // buildConfigField "String", "GIT_SHA", "\"${gitSha}\""
-
-        manifestPlaceholders = [
-                fabricCrashlyticsApiKey: ""   // Set this in your ~/.gradle/gradle.properties as: crashlyticsApiKey or use "$System.env.CRASHLYTICS_API_KEY"  to use a env variable (and then set that value, of course)
-        ]
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -52,16 +47,17 @@ android {
 
     signingConfigs {
         debug {
-            storePassword '123123'
-            keyPassword '123123'
             storeFile file('debug.keystore')
+            storePassword System.getenv("DEBUG_STORE_PASS")
             keyAlias 'debug'
+            keyPassword System.getenv("DEBUG_KEY_PASS")
         }
+
         release {
-            storePassword '123123'
-            keyPassword '123123'
             storeFile file('release.keystore')
+            storePassword System.getenv("RELEASE_STORE_PASS")
             keyAlias 'release'
+            keyPassword System.getenv("RELEASE_KEY_PASS")
         }
     }
 
@@ -141,8 +137,8 @@ dependencies {
     // SqlBrite
     implementation 'com.squareup.sqlbrite:sqlbrite:1.1.2'
     // Dependency Injection
-    implementation 'com.google.dagger:dagger:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    implementation 'com.google.dagger:dagger:2.12'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
     // Testing
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -151,7 +147,7 @@ dependencies {
     // Set this dependency to build and run Espresso tests
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     // Contrib
-    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.1') {
         // http://stackoverflow.com/a/30931887/5210
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
@@ -160,7 +156,7 @@ dependencies {
     // Set this dependency to build and run UI Automator tests
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation 'org.mockito:mockito-core:1.9.5'
+    androidTestImplementation 'org.mockito:mockito-core:2.11.0'
     compileOnly 'javax.annotation:jsr250-api:1.0'
 }
 
